# sdk-typescript

./: .eslintrc  .gitignore  .gitmodules  .npmrc  .oxlintrc.jsonc  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  PLUGIN_FEATURE.md  README.md  binding.gyp  cliff.toml  commitlint.config.js  compile-proto.sh  eslint.config.mjs  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.prune.json  tsconfig.scripts.json  webpack.config.js
.buildkite/: pipeline-nightly.yml  pipeline.yml
.github/: CODEOWNERS  dependabot.yml
docs/: activation-in-debug-mode.mermaid  activation-with-context-reuse.mermaid  activation.mermaid  building.md  data-converter.md  debug-replay.mermaid  determinism.md  future-plan-test-extraction.md  logging.md  protobuf-libraries.md  sdk-structure.md  workflow-scopes-and-cancellation.md
etc/: mac-cargo-config.toml  otel-collector-config.yaml  prometheus.yaml  prometheus.yml  verdaccio-config.yaml
example/: tsconfig.json
native/: .gitignore  Cargo.toml  index.d.ts
native/src/: lib.rs  mock_core.rs  mock_history.rs
patches/: protobufjs@7.5.5.patch  protobufjs@7.5.8.patch
scripts/: clean.js  clean.mjs  clean.ts  compile-proto.js  create-certs-dir.js  create-certs-dir.ts  gen-docs.js  gen-system-nexus.ts  init-from-verdaccio.js  init-from-verdaccio.ts  package.json  poor-mans-snipsync.js  prepublish.js  prepublish.mjs  prepublish.ts  publish-to-verdaccio.js  publish-to-verdaccio.ts  publish.sh  registry.js  registry.ts  release.sh  test-example.js  test-example.ts  tsconfig.json  utils.js  utils.ts  wait-on-temporal.js  wait-on-temporal.mjs
src/: engine.ts  events.ts  index.ts  loader.ts  rxutils.ts  scheduler.ts  stdlib.ts  try-native.ts  tryNative.ts  utils.ts  worker.ts  workflow-activator.ts  (+3 more)
(+405 files in other folders)
