[package]
name = "temporal-sdk-node"
version = "0.1.0"
authors = ["Roey Berman <roey@temporal.io>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "temporal_sdk_node"
# TODO(RB) - With the napi-* feature it should be dylib on mac.
# SJ: I think needs to be cdylib on linux.
crate-type = ["cdylib"]

[dependencies]
# TODO: neon = { version = "0.7", default-features = false, features = ["napi-4"] }
neon = "0.7"
anyhow = "1.0"  # For mocks

[dependencies.temporal-sdk-core]
version = "*"
path = "../../sdk-core"

[build-dependencies]
neon-build = "0.7"
