[package]
name = "temporal-sdk-node"
version = "0.1.0"
authors = ["Roey Berman <roey@temporal.io>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "temporal_sdk_node"
crate-type = ["dylib"]

[dependencies]
neon = { version = "0.7", default-features = false, features = ["napi-4", "event-queue-api"] }
prost = "0.7"
prost-types = "0.7"

[dependencies.temporal-sdk-core]
version = "*"
path = "../../sdk-core"

[build-dependencies]
neon-build = "0.7"
